# lambda-calculus

./: Cargo.toml  README.md
npm/: package-lock.json  package.json  peanobad.coc  peanofirst.coc  peanonew.coc  peanosecond.coc  set.coc  test.coc  test2.coc  test3.coc  test4.coc
npm/examples/: README.md
npm/test2/: test2.coc  test5.coc
src/: a_lambda.rs  a_lambda_main.rs  b_coc.rs  b_coc_main.rs  c_coc.rs  c_coc_main.rs  d_coc.rs  d_coc_main.rs  main.rs
