[package]
name = "coc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "a_lambda_main"
path = "src/a_lambda_main.rs"

[[bin]]
name = "b_coc_main"
path = "src/b_coc_main.rs"

[[bin]]
name = "c_coc_main"
path = "src/c_coc_main.rs"

[[bin]]
name = "d_coc_main"
path = "src/d_coc_main.rs"
